--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,15 +11,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Ch6Activity1"></activity>
-        <activity android:name=".Ch5Activity1">
+        <activity android:name=".Ch7Activity3">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                 <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Ch4Activity3"></activity>
+        <activity android:name=".Ch7Activity2" />
+        <activity android:name=".Ch7Activity1" />
+        <activity android:name=".Ch6Activity1" />
+        <activity android:name=".Ch5Activity1">
+        </activity>
+        <activity android:name=".Ch4Activity3" />
         <activity android:name=".Ch4Activity2" />
         <activity android:name=".Ch4Activity" />
         <activity android:name=".MainActivity" />
